# antler-proj

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  LICENSE  README.md  common.cmake
.githooks/: pre-commit
3p_include/: CLI11.hpp
aproj/: CMakeLists.txt  add_to.hpp  aproj-add-app.cpp  aproj-add-dep.cpp  aproj-add-lib.cpp  aproj-add-test.cpp  aproj-common.h  aproj-common.hpp  aproj-init.cpp  aproj-populate.cpp  aproj-prefix.h  aproj-rm-dep.cpp  aproj-update-dep.cpp  aproj-validate.cpp  aproj.cpp  common.hpp  init.hpp  populate.hpp  remove_from.hpp  update.hpp
aproj/whereami/: linux.hpp  whereami.hpp
common/: CMakeLists.txt
common/antler/common/: so_support.h  so_support.hpp
common/antler/string/: from.h  from.hpp  split.h  split.hpp  trim.h  trim.hpp
common/antler/string/detail/: from.ipp  split.ipp  trim.ipp
common/antler/system/: exec.h  exec.hpp
common/antler/system/detail/: exec.ipp
common/sb/: LICENSE  ignore.h
common/src/: lib.cpp  so_support.h  so_support.hpp
depends/: CMakeLists.txt  boost.cmake  rapidyaml.cmake  toml.cmake  yaml-cpp.cmake  yaml.cmake
depends/patches/: rapidyaml.patch  toml.patch  yaml.patch
docs/: project_manager.md  project_manager_original_design.md  sample1.yaml  sample2.yaml  sample3.yaml  usecases.md  users_guide.md
docs/examples/hello-world/: README  project.yaml
docs/examples/hello-world/apps/hello/: hello.cpp
docs/examples/lib_usage_example/: README  project.yaml
docs/examples/lib_usage_example/apps/lib_usage/: lib_usage.cpp
docs/examples/lib_usage_example/include/lib_usage/: lib_usage.hpp
docs/examples/lib_usage_example/include/print_float/: print_float.h
docs/examples/lib_usage_example/include/print_number/: print_number.hpp
docs/examples/lib_usage_example/libs/print_float/: print_float.c
docs/examples/lib_usage_example/libs/print_number/: print_number.cpp
docs/examples/send-inline-example/: README  project.yaml
docs/examples/send-inline-example/apps/hello/: hello.cpp
docs/examples/send-inline-example/apps/send_inline/: send_inline.cpp
docs/examples/send-inline-example/include/hello/: hello.hpp
docs/examples/send-inline-example/include/send_inline/: send_inline.hpp
docs/man/: antler-proj.1  antler-proj.1.md  make_man.sh
include/: CMakeLists.txt
include/antler/project/: cmake.hpp  dependency.hpp  location.hpp  manifest.hpp  mustache.hpp  net_utils.hpp  object.hpp  populator.hpp  project.hpp  semver.hpp  semver.hpp2  source.hpp  version.hpp  version_compare.hpp  version_constraint.hpp  yaml.hpp
include/antler/string/: from.hpp
include/antler/system/: exec.hpp  filesystem.hpp  preprocessor.hpp  serialize.hpp  utils.hpp  version.hpp.in
project/: CMakeLists.txt
project/antler/project/: dependency.h  dependency.hpp  language.h  language.hpp  location.h  location.hpp  object.h  object.hpp  project.h  project.hpp  semver.h  semver.hpp  so_support.h  so_support.hpp  version.h  version.hpp  version_compare.h  version_compare.hpp  version_constraint.h  version_constraint.hpp
project/antler/string/: from.hpp
project/antler/string/detail/: from.ipp
project/antler/system/: exec.hpp
project/src/: cmake.cpp  cmake.h  cmake.hpp  dependency.cpp  exec.cpp  key.cpp  key.h  key.hpp  langague.cpp  language.cpp  location.cpp  object.cpp  project-is_valid.cpp  project-parse.cpp  project-populate.cpp  project-print.cpp  project.cpp  semver.cpp  test.cpp  version.cpp  version_compare.cpp  version_constraint.cpp
src/: CMakeLists.txt  cmake.cpp  cmake.hpp  cmake_templates.cpp  dependency.cpp  exec.cpp  location.cpp  object.cpp  populator.cpp  project-is_valid.cpp  project-parse.cpp  project-populate.cpp  project-print.cpp  project.cpp  ryml.cpp  semver.cpp  token.hpp  token_def.hpp  version.cpp  version_compare.cpp  version_constraint.cpp
templates/: generator.py
templates/basic/: CMakeLists.txt  README.txt
templates/basic/include/: basic.hpp
templates/basic/ricardian/: basic.contracts.md
templates/basic/src/: CMakeLists.txt  basic.cpp
templates/database/: README.txt
templates/database/ricardian/: database.contracts.md
templates/database/src/: database.cpp
test/: CMakeLists.txt  string_from.cpp  test_common.h  test_common.hpp  version.cpp  version_constraint.cpp  version_semver.cpp  version_semver.cpp2
tests/: CMakeLists.txt  bnfformatter_tests.cpp  cmake_tests.cpp  common.hpp  constants.hpp.in  dependency_tests.cpp  example.yaml  example.yml  init_tests.cpp  location_tests.cpp  manifest_tests.cpp  net_utils_tests.cpp  object_tests.cpp  project.yml  project_tests.cpp  string_from.cpp  version_constraint_tests.cpp  version_tests.cpp
tests/fuzz/: CMakeLists.txt  version_fuzz.cpp
tools/: CLI11.hpp  CMakeLists.txt  README.md  add_to.hpp  app_version.hpp  bnfformatter.hpp  build.hpp  common.hpp  init.hpp  main.cpp  populate.hpp  remove_from.hpp  update.hpp  validate.hpp
tools/tests/: add_and_update.py  add_to_tests.py  init_tests.py  populate_and_build.py  util.py
tools/tests/pandb_contract/: project.yaml
tools/tests/pandb_contract/apps/test/: greeting.cpp  test.cpp
tools/tests/pandb_contract/include/test/: test.hpp
